[metadata]
description-file = README.md


[flake8]
max-line-length = 88
author-attribute = forbidden
no-accept-encodings = True
assertive-snakecase = True
# assertive-test-pattern = <fnmatch>
inline-quotes = "
multiline-quotes = """
docstring-quotes = """
application-import-names = satosa

hang_closing = false
doctests = false
max-complexity = 10
exclude =
    .git
    __pycache__
    doc/source/conf.py
    docs/source/conf.py
    build
    dist
